# fortune-teller

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
api/beans/: chrono.py  double_divination.py  result.py
assets/: chrono.json  divination.json  divination.txt  doubleDivinationDesc.xlsx  double_divination.json  double_divination.txt  double_divination_property_name.txt  double_divination_record.txt  mutual_divination.txt
common/utils/: description.py  divination.py  double_divination.py  luck.py  stroke.py  test_description.py
scripts/: divination_txt_to_json.py  double_divination_txt_to_json.py
service/: runner.py
src/: app.py
src/api/beans/: divination.py  result.py
src/common/enums/: element.py  luck.py
src/common/utils/: chrono.py  divination.py  double_divination.py  luck.py  mutal_divination.py
src/service/: divination.py  double_divination.py  runner.py
